--- a/site/content/work/awful-german-language.html
+++ b/site/content/work/awful-german-language.html
@@ -3,12 +3,11 @@ author: Mark Twain
 title: The Awful German Language
 summary: "An essay on the trials and trevails of learning."
 ---
-
 Learning German is hard. Twain got that like no other. This essay, originally an appendix in _The Tramps Abroad_, details his trials and trevails of trying to master _deutsch_, and was a great solace to me while attempting to do the same. 
 
 Printed at the _Druckladen_ of the Gutenberg Museum, in Mainz, Germany, making use of some of the unusual typefaces in their extensive collection. 
 <div class="gallery">
-    <img src="{{ media_url('img/awful-1.jpg') }}"/>
-    <img src="{{ media_url('img/awful-2.jpg') }}"/>
-    <img src="{{ media_url('img/awful-3.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_awful-1.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_awful-2.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_awful-3.jpg') }}"/>
 </div>
