--- a/site/content/work/few-faces-emil-rudolf-weiss.html
+++ b/site/content/work/few-faces-emil-rudolf-weiss.html
@@ -1,5 +1,3 @@
-
-
 ---
 author:
 title: A Few Faces of Emil Rudolf Weiss
@@ -9,13 +7,14 @@ summary: "A Type Specimen"
 ---
 
 
-<h4>A specimen book</h4>
+### A specimen book
+
 I published this small specimen book in two editions, German and English. Weiß designed a number of handsome typefaces that are still in use today. The Weiß Lapidar that appears on the title page below is especially handsome.
 
 Hand-printed on a Korrex cylinder press on Zerkall papers.
 <div class="gallery">
-    <img src="{{ media_url('img/few-faces-1.jpg') }}"/>
-    <img src="{{ media_url('img/few-faces-2.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_few-faces-1.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_few-faces-2.jpg') }}"/>
 </div>
 
 
