--- a/site/content/work/wallau-broadside.html
+++ b/site/content/work/wallau-broadside.html
@@ -1,15 +1,13 @@
 ---
 author: Rudolf Koch
 title: Wallau Broadside
-summary: "A small collection of difficult words."
+summary: "A typespecimen from Klingspor originals." 
+date: 2012-08-18 16:25:31
+thumbnail: 'img/thumb_wallau-2.jpg'
 ---
-
 
 This broadside was printed in Mainz, Germany, at the _Druckladen des Gutenberg Museums_. It's Rudolf Koch's Wallau, a _rundgotisch_ typeface, with elements of classic German blackletter and traditional roman capitals.
 <div class="gallery">
-    <img src="{{ media_url('img/wallau-1.jpg') }}"/>
-    <img src="{{ media_url('img/wallau-2.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_wallau-1.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_wallau-2.jpg') }}"/>
 </div>
-
-
-
