--- a/site/content/work/easter-week.html
+++ b/site/content/work/easter-week.html
@@ -2,6 +2,7 @@
 author: Anton Chekhov
 title: Easter Week
 summary: "A new translation with accompanying wood engravings." 
+thumbnail: "img/thumb_easter-10.jpg"
 ---
 Two Chekhov stories--"The Student," and "On Easter Eve"--in new translation--courtesty of [Michael Henry Heim](http://www.humnet.ucla.edu/humnet/slavic/faculty/heim_m.html). These stories are two favorites of mine--and I even read [somewhere][1] that "The Student" was Chekhov's own favorite. It's a spectacular update on the standard [Constance Garnett](http://en.wikipedia.org/wiki/Constance_Garnett) translations. Handprinted on a Vandercook Universal I from mint Dante types. The paper was smuggled in from Germany.
 
@@ -9,16 +10,15 @@ The stories are flanked by [Barry Moser's](http://www.moser-pennyroyal.com/) dar
 
 [1]: <http://books.google.com/books?id=Vk8XRRYl938C&printsec=frontcover&dq=heim+karlinksy++chekhov+life+thought&hl=en&ei=OwgFTbXnBs2r8AaUv8HnAg&sa=X&oi=book_result&ct=result&resnum=1&ved=0CCkQ6AEwAA#v=onepage&q&f=false>
 <div class="gallery">
-    <img src="{{ media_url('img/easter-10.jpg') }}"/>
-    <img src="{{ media_url('img/easter-1.jpg') }}"/>
-    <img src="{{ media_url('img/easter-2.jpg') }}"/>
-    <img src="{{ media_url('img/easter-3.jpg') }}"/>
-    <img src="{{ media_url('img/easter-4.jpg') }}"/>
-    <img src="{{ media_url('img/easter-5.jpg') }}"/>
-    <img src="{{ media_url('img/easter-6.jpg') }}"/>
-    <img src="{{ media_url('img/easter-7.jpg') }}"/>
-    <img src="{{ media_url('img/easter-8.jpg') }}"/>
-    <img src="{{ media_url('img/easter-9.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_easter-10.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_easter-1.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_easter-2.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_easter-3.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_easter-4.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_easter-6.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_easter-7.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_easter-8.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_easter-9.jpg') }}"/>
 </div>
 
 
