--- a/site/content/work/reading-group-forty-seven.html
+++ b/site/content/work/reading-group-forty-seven.html
@@ -2,19 +2,20 @@
 author: Paul Celan
 title: A Reading for Group 47
 summary: "German with English translations of Celan's youthful poems."
+thumbnail: img/thumb_celan-3.jpg
 ---
-
-I first stumbled on "Todesfuge" while working in Nicaragau--and before I could read German. It was shocking, brutal, powerful. I read it in English, then in Spanish translation--parsing through the German as best I could. 
+{% filter markdown|typogrify %}
+I first stumbled on "Todesfuge" while working in Nicaragau--and before I could read German. It was shocking, brutal, powerful. I read it in English, then in Spanish translation--parsing through the German as best I could. I've since learned German and Celan's poems have only improved.  
 
 _A Reading for Group 47_ reprints "Todesfuge", and three other poems in Celan's original German, facing [John Felstiner's](http://english.stanford.edu/bio.php?name_id=49) powerful English translations. A frontispiece by the California artist [Dirk Hagner](http://www.dirkhagner.com/) finishes the deal.
 
 Printed in Eric Gill's Sans and Joanna on mouldmade Zerkall book papers.
+{% endfilter %}
 <div class="gallery">
-    <img src="{{ media_url('img/celan-2.jpg') }}"/>
-    <img src="{{ media_url('img/celan-6.jpg') }}"/>
-    <img src="{{ media_url('img/celan-3.jpg') }}"/>
-    <img src="{{ media_url('img/celan-4.jpg') }}"/>
-    <img src="{{ media_url('img/celan-5.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_celan-2.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_celan-3.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_celan-4.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_celan-5.jpg') }}"/>
 </div>
 
 
