--- a/site/content/work/useful-words-grammar.html
+++ b/site/content/work/useful-words-grammar.html
@@ -6,9 +6,9 @@ After filling a couple of legal pads with grammar notes, I composed and printed 
 
 Letterpress printed wrappers in Walbaum types.
 <div class="gallery">
-    <img src="{{ media_url('img/useful-1.jpg') }}"/>
-    <img src="{{ media_url('img/useful-2.jpg') }}"/>
-    <img src="{{ media_url('img/useful-3.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_useful-1.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_useful-2.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_useful-3.jpg') }}"/>
 </div>
 
 
