--- a/site/content/work/awful-german-language.html
+++ b/site/content/work/awful-german-language.html
@@ -2,12 +2,18 @@
 author: Mark Twain
 title: The Awful German Language
 summary: "An essay on the trials and trevails of learning."
+leader: img/scaled_awful-1.jpg
 ---
 Learning German is hard. Twain got that like no other. This essay, originally an appendix in _The Tramps Abroad_, details his trials and trevails of trying to master _deutsch_, and was a great solace to me while attempting to do the same. 
 
 Printed at the _Druckladen_ of the Gutenberg Museum, in Mainz, Germany, making use of some of the unusual typefaces in their extensive collection. 
-<div class="gallery">
-    <img src="{{ media_url('img/scaled_awful-1.jpg') }}"/>
-    <img src="{{ media_url('img/scaled_awful-2.jpg') }}"/>
-    <img src="{{ media_url('img/scaled_awful-3.jpg') }}"/>
-</div>
+
+<figure>
+<img src="{{ media_url('img/scaled_awful-1.jpg') }}"/>
+</figure>
+<figure>
+<img src="{{ media_url('img/scaled_awful-2.jpg') }}"/>
+</figure>
+<figure>
+<img src="{{ media_url('img/scaled_awful-3.jpg') }}"/>
+</figure>
