--- a/site/content/work/awful-german-language.html
+++ b/site/content/work/awful-german-language.html
@@ -7,13 +7,8 @@ leader: img/scaled_awful-1.jpg
 Learning German is hard. Twain got that like no other. This essay, originally an appendix in _The Tramps Abroad_, details his trials and trevails of trying to master _deutsch_, and was a great solace to me while attempting to do the same. 
 
 Printed at the _Druckladen_ of the Gutenberg Museum, in Mainz, Germany, making use of some of the unusual typefaces in their extensive collection. 
-
-<figure>
-<img src="{{ media_url('img/scaled_awful-1.jpg') }}"/>
-</figure>
-<figure>
-<img src="{{ media_url('img/scaled_awful-2.jpg') }}"/>
-</figure>
-<figure>
-<img src="{{ media_url('img/scaled_awful-3.jpg') }}"/>
-</figure>
+<div class="gallery">
+    <img src="{{ media_url('img/scaled_awful-1.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_awful-2.jpg') }}"/>
+    <img src="{{ media_url('img/scaled_awful-3.jpg') }}"/>
+</div>
