--- a/site/content/index.html
+++ b/site/content/index.html
@@ -1,8 +1,7 @@
 {% extends "base.j2" %}
 
 {% block splash %}
-    <h1>Hello, I'm a printer, programmer, builder. I'm a student at <a href="hlt.mit.media.edu">High-Low Tech</a> at the <a href="media.mit.edu">MIT Media Lab</a>.</h1> 
-    <h1>This is my website.</h1>
+    <h1>Hello, I am a printer, programmer, and a student at <a href="hlt.mit.media.edu">High-Low Tech</a> at the <a href="media.mit.edu">MIT Media Lab</a>.</h1> 
 {% endblock %}
 
 {% block content %}
