All kinds of things

--- a/site/content/work/few-faces-emil-rudolf-weiss.html
+++ b/site/content/work/few-faces-emil-rudolf-weiss.html
@@ -2,6 +2,7 @@
 author:
 title: A Few Faces of Emil Rudolf Weiss
 summary: "A Type Specimen"
+thumbnail: img/thumb_few-faces-1.jpg
 ---
 ### A specimen book
 
