--- a/site/content/index.html
+++ b/site/content/index.html
@@ -26,7 +26,7 @@
     <h2><a href="/posts/">WORK</a></h2> 
 {% for res in site.content.walk_resources_grouped_by_work() %}
     {% if res.meta.thumbnail %}
-        <!--<a href="{{ res.full_url }}"><img src="{{ media_url( res.meta.thumbnail) }}" /></a>-->
+        <a href="{{ res.full_url }}"><img src="{{ media_url( res.meta.thumbnail) }}" /></a
      {% endif %}
     <div class="listing">{% include "assets/render_title.j2" %}
     <p class="summary">{{ res.meta.summary }}</p></div>
