--- a/site/content/index.html
+++ b/site/content/index.html
@@ -1,7 +1,7 @@
 {% extends "base.j2" %}
 
 {% block splash %}
-    <h1>Hello, I am a printer, programmer, and a student at <a href="hlt.mit.media.edu">High-Low Tech</a> at the <a href="media.mit.edu">MIT Media Lab</a>.</h1> 
+    <h1 class="splash">Hello, I am a printer, programmer, and a student at <a href="hlt.mit.media.edu">High-Low Tech</a> at the <a href="media.mit.edu">MIT Media Lab</a>.</h1> 
 {% endblock %}
 
 {% block content %}
@@ -23,12 +23,13 @@
 </section>
 
 <section class="wrapper">
-    <h2><a href="/posts/">WORK</a></h2> 
+    <h2><a href="/posts/">PRINTING</a></h2> 
 {% for res in site.content.walk_resources_grouped_by_work() %}
+    <div class="listing">
     {% if res.meta.thumbnail %}
-        <a href="{{ res.full_url }}"><img src="{{ media_url( res.meta.thumbnail) }}" /></a
-     {% endif %}
-    <div class="listing">{% include "assets/render_title.j2" %}
+        <a href="{{ res.full_url }}"><img src="{{ media_url( res.meta.thumbnail) }}" /></a>
+    {% endif %}
+    {% include "assets/render_title.j2" %}
     <p class="summary">{{ res.meta.summary }}</p></div>
 {% endfor %}
 </section>
