Keeping track of birdy

--- a/site/content/printing/sesquipedality.html
+++ b/site/content/printing/sesquipedality.html
@@ -1,7 +1,7 @@
 ---
 title: Sesquipedality
 summary: "A small collection of difficult words."
-thumbnail: img/thumb_sesquip-1.jpg
+thumbnail: sesquip-1.jpg
 ---
 
 A small collection of difficult words culled from a variety of eccentric dictionaries. Includes useful gems like _totipalmate_, meaning, web-toed.
