--- a/site/content/printing/useful-words-grammar.html
+++ b/site/content/printing/useful-words-grammar.html
@@ -1,7 +1,7 @@
 ---
 title: "Useful Words & Grammar"
 summary: "A learner's guide to the German Language"
-thumbnail: img/thumb_useful-1.jpg
+thumbnail: useful-1.jpg
 ---
 After filling a couple of legal pads with grammar notes, I composed and printed this compendium to tuck in my jacket pocket. It's rife with errors, but I've found it useful. 
 
