--- a/site/content/index.html
+++ b/site/content/index.html
@@ -16,18 +16,22 @@
 </section>
 
 <section class="wrapper">
-    <h2><a href="/posts/">PROJECTS</a></h2> 
+    <h2><a href="/projects/">PROJECTS</a></h2> 
 {% for res in site.content.walk_resources_grouped_by_projects() %}
     <div class="listing">{% include "assets/render_title.j2" %}</div>
+    {% if res.meta.summary %}
+    <p class="summary">{{ res.meta.summary }}</p>
+    {% endif %}
 {% endfor %}
 </section>
 
 <section class="wrapper">
-    <h2><a href="/posts/">PRINTING</a></h2> 
-{% for res in site.content.walk_resources_grouped_by_work() %}
+    <h2><a href="/printing/">PRINTING</a></h2> 
+{% for res in site.content.walk_resources_grouped_by_printing() %}
     <div class="listing">
     {% if res.meta.thumbnail %}
-        <a href="{{ res.full_url }}"><img src="{{ media_url( res.meta.thumbnail) }}" /></a>
+        {% set image='img/thumb_' + res.meta.thumbnail %}
+        <a href="{{ res.full_url }}"><img src="{{ media_url( image ) }}" /></a>
     {% endif %}
     {% include "assets/render_title.j2" %}
     <p class="summary">{{ res.meta.summary }}</p></div>
