--- a/site/content/printing/easter-week.html
+++ b/site/content/printing/easter-week.html
@@ -2,7 +2,7 @@
 author: Anton Chekhov
 title: Easter Week
 summary: "A new translation with accompanying wood engravings." 
-thumbnail: "img/thumb_easter-10.jpg"
+thumbnail: "easter-10.jpg"
 ---
 Two Chekhov stories--"The Student," and "On Easter Eve"--in new translation--courtesty of [Michael Henry Heim](http://www.humnet.ucla.edu/humnet/slavic/faculty/heim_m.html). These stories are two favorites of mine--and I even read [somewhere][1] that "The Student" was Chekhov's own favorite. It's a spectacular update on the standard [Constance Garnett](http://en.wikipedia.org/wiki/Constance_Garnett) translations. Handprinted on a Vandercook Universal I from mint Dante types. The paper was smuggled in from Germany.
 
