--- a/site/content/printing/few-faces-emil-rudolf-weiss.html
+++ b/site/content/printing/few-faces-emil-rudolf-weiss.html
@@ -2,10 +2,8 @@
 author:
 title: A Few Faces of Emil Rudolf Weiss
 summary: "A Type Specimen"
-thumbnail: img/thumb_few-faces-1.jpg
+thumbnail: few-faces-1.jpg
 ---
-### A specimen book
-
 I published this small specimen book in two editions, German and English. Weiß designed a number of handsome typefaces that are still in use today. The Weiß Lapidar that appears on the title page below is especially handsome.
 
 Hand-printed on a Korrex cylinder press on Zerkall papers.
