--- a/site/content/printing/index.html
+++ b/site/content/printing/index.html
@@ -10,14 +10,20 @@ exclude: True
 {% block content %}
 
 {% for res in resource.node.walk_resources_sorted_by_name() %}
-    {% if not res.meta.exclude %} 
+{% if not res.meta.exclude %} 
+<section>
     <h3><a href="{{ res.full_url }}">{{ res.meta.title }}</a></h3>
     {% refer to res.relative_path as post %} 
 
-    {{ post.html('article>section>p:nth-child(1)') }}
-
-    <h4><a href="{{ res.full_url }}">read on &raquo;</a></h4>
+    <p>{{ post.html('article>section>p:nth-child(1)') }}</p>
+    {% if res.meta.thumbnail %}
+        {% set image='img/scaled_' + res.meta.thumbnail %}
+        <figure><img src={{ media_url(image) }}/></figure>
     {% endif %}
+    
+    <h4><a href="{{ res.full_url }}">read on &raquo;</a></h4>
+</section>
+{% endif %}
 {% endfor %}
 
 {% endblock %}
