--- a/site/content/printing/reading-group-forty-seven.html
+++ b/site/content/printing/reading-group-forty-seven.html
@@ -2,10 +2,10 @@
 author: Paul Celan
 title: A Reading for Group 47
 summary: "German with English translations of Celan's youthful poems."
-thumbnail: img/thumb_celan-3.jpg
+thumbnail: celan-3.jpg
 ---
 {% filter markdown|typogrify %}
-I first stumbled on "Todesfuge" while working in Nicaragau--and before I could read German. It was shocking, brutal, powerful. I read it in English, then in Spanish translation--parsing through the German as best I could. I've since learned German and Celan's poems have only improved.  
+I first stumbled on "Todesfuge" while working in Nicaragau--and before I could read German. It was shocking, brutal, powerful. I read it in English, then in Spanish translation--parsing through the German as best I could. I've since learned German--or at least, learned German well enough to stumble through these. 
 
 _A Reading for Group 47_ reprints "Todesfuge", and three other poems in Celan's original German, facing [John Felstiner's](http://english.stanford.edu/bio.php?name_id=49) powerful English translations. A frontispiece by the California artist [Dirk Hagner](http://www.dirkhagner.com/) finishes the deal.
 
