--- a/site/content/projects/index.html
+++ b/site/content/projects/index.html
@@ -1,3 +1,29 @@
 ---
 exclude: True
 ---
+{% extends "listing.j2" %}
+
+{% block class%}
+    {{ macros.render_class(resource.meta.class) }}
+{% endblock %}
+
+{% block content %}
+
+{% for res in resource.node.walk_resources_sorted_by_date() %}
+{% if not res.meta.exclude %} 
+<section>
+    <h3><a href="{{ res.full_url }}">{{ res.meta.title }}</a></h3>
+    {% refer to res.relative_path as post %} 
+
+    <p>{{ post.html('article>section>p:nth-child(1)') }}</p>
+    {% if res.meta.thumbnail %}
+        {% set image='img/scaled_' + res.meta.thumbnail %}
+        <figure><img src={{ media_url(image) }}/></figure>
+    {% endif %}
+    
+    <h4><a href="{{ res.full_url }}">read on &raquo;</a></h4>
+</section>
+{% endif %}
+{% endfor %}
+
+{% endblock %}
