--- a/site/content/projects/index.html
+++ b/site/content/projects/index.html
@@ -21,7 +21,7 @@ exclude: True
         <figure><img src={{ media_url(image) }}/></figure>
     {% endif %}
     
-    <h4><a href="{{ res.full_url }}">read on &raquo;</a></h4>
+    <p><a href="{{ res.full_url }}">read on &raquo;</a></h4>
 </section>
 {% endif %}
 {% endfor %}
