--- a/site/content/index.html
+++ b/site/content/index.html
@@ -18,10 +18,11 @@
 <section class="wrapper">
     <h2><a href="/projects/">PROJECTS</a></h2> 
 {% for res in site.content.walk_resources_grouped_by_projects() %}
-    <div class="listing">{% include "assets/render_title.j2" %}</div>
+    <div class="listing">{% include "assets/render_title.j2" %}
     {% if res.meta.summary %}
     <p class="summary">{{ res.meta.summary }}</p>
     {% endif %}
+    </div>
 {% endfor %}
 </section>
 
