--- a/site/content/printing/index.html
+++ b/site/content/printing/index.html
@@ -17,11 +17,11 @@ exclude: True
 
     <p>{{ post.html('article>section>p:nth-child(1)') }}</p>
     {% if res.meta.thumbnail %}
-        {% set image='img/scaled_' + res.meta.thumbnail %}
+        {% set image='img/listing_' + res.meta.thumbnail %}
         <figure><img src={{ media_url(image) }}/></figure>
     {% endif %}
     
-    <h4><a href="{{ res.full_url }}">read on &raquo;</a></h4>
+    <p><a href="{{ res.full_url }}">read on &raquo;</a></p>
 </section>
 {% endif %}
 {% endfor %}
