--- a/site/content/projects/ir-led-throwies.html
+++ b/site/content/projects/ir-led-throwies.html
@@ -1,6 +1,6 @@
 ---
 title: Infra-Red LED Throwies
-summary: Well, sort've. 
+summary: Three parts, cost a buck, remote-controlled. As good as TV.
 date: 2012-08-16 10:54:13
 ---
 I've been toying with coming up with quick, easy, scalable projects for large groups to do together. It had to be something fast--like, minute-fast--and cool. I've always loved the little [LED Throwies](http://www.instructables.com/id/LED-Throwies/) from the fine people over at [Graffiti Research Lab](http://graffitiresearchlab.com/)--and wanted to do a version for a High-Low Tech workshop at the Boston [ICA](icaboston.org).
