--- a/site/content/projects/index.html
+++ b/site/content/projects/index.html
@@ -20,7 +20,7 @@ exclude: True
     <p>{{ post.html('article>section>p:nth-child(1)') }}</p>
     {% if res.meta.thumbnail %}
         {% set image='img/listing_' + res.meta.thumbnail %}
-        <figure><img src={{ media_url(image) }}/></figure>
+        <figure><img src="{{ media_url(image) }}"/></figure>
     {% endif %}
     
     <p><a href="{{ res.full_url }}">read on &raquo;</a></h4>
