Sarah had some opinions.

--- a/site/content/projects/ir-led-throwies.html
+++ b/site/content/projects/ir-led-throwies.html
@@ -1,11 +1,11 @@
 ---
 title: Infra-Red LED Throwies
-summary: Three parts, cost a buck, remote-controlled. As good as TV.
+summary: Use an ordinary remote control to blink LED throwies on and off. 
 date: 2012-08-16 10:54:13
 ---
-I've been toying with coming up with quick, easy, scalable projects for large groups to do together. It had to be something fast--like, minute-fast--and cool. I've always loved the little [LED Throwies](http://www.instructables.com/id/LED-Throwies/) from the fine people over at [Graffiti Research Lab](http://graffitiresearchlab.com/)--and wanted to do a version for a High-Low Tech workshop at the Boston [ICA](icaboston.org).
+I've been toying with with ideas for a quick, easy, scalable project for a large group of teenagers to do together for the Boston [ICA's](http://icaboston.org) Teen Night. 
 
-Here's the updated version that allows for the little guys to be controlled by a regular old remote control. It's a little startling how simple the whole operation is.  
+I've always really liked the little [LED Throwies](http://www.instructables.com/id/LED-Throwies/) from the fine people over at [Graffiti Research Lab](http://graffitiresearchlab.com/), *so* here's an updated version that allows for the little guys to be controlled by a regular old remote control. It's a little startling how simple the whole operation is.  
 
 ## Materials
 What we need: not much. Well, getting your hands on the IR receivers will be the tricky part:
@@ -14,11 +14,11 @@ What we need: not much. Well, getting your hands on the IR receivers will be the
 
 This is just what like lives inside of millions of watches, all over this fine land. And what keeps the time in your computer accurate, and a bunch of other things. You can get them--for a small fortune--at a drugstore. Someone told me that Ikea was now selling them at close to wholesale prices.
 
-- A Regular LED. [[DigiKey](http://www.digikey.com/product-detail/en/C503B-BCS-CV0Z0461/C503B-BCS-CV0Z0461-ND/1922944)]
+- A Regular LED. [[SparkFun](https://www.sparkfun.com/products/533)][[DigiKey](http://www.digikey.com/product-detail/en/C503B-BCS-CV0Z0461/C503B-BCS-CV0Z0461-ND/1922944)]
 
 Pretty much anything like this will do. Available at RadioShack, Sparkfun, or wherever fine, finger-friendly electronics are sold.
 
-- 38KHz Infrared Receiver [[Digikey](http://www.digikey.com/scripts/dksearch/dksus.dll?vendor=0&keywords=751-1390-5-ND)]
+- 38KHz Infrared Receiver [[SparkFun](https://www.sparkfun.com/products/10266)][[Digikey](http://www.digikey.com/scripts/dksearch/dksus.dll?vendor=0&keywords=751-1390-5-ND)]
 
 There are a number of these out there--the frequency, 38KHz, is an industry-standard--so anything like that should work fine. These are the same little fellows that live inside of your TV, or radio, or anything, really, that's remote-controlled. Look for one's with three-legs.  
 
