--- a/site/content/printing/reading-group-forty-seven.html
+++ b/site/content/printing/reading-group-forty-seven.html
@@ -1,8 +1,9 @@
 ---
 author: Paul Celan
 title: A Reading for Group 47
-summary: "German with English translations of Celan's youthful poems."
+summary: A short collection of Celan's poetry in German & English. 
 thumbnail: celan-3.jpg
+weight: 90
 ---
 {% filter markdown|typogrify %}
 I first stumbled on "Todesfuge" while working in Nicaragau--and before I could read German. It was shocking, brutal, powerful. I read it in English, then in Spanish translation--parsing through the German as best I could. I've since learned German--or at least, learned German well enough to stumble through these. 
