--- a/site/content/printing/sesquipedality.html
+++ b/site/content/printing/sesquipedality.html
@@ -2,6 +2,7 @@
 title: Sesquipedality
 summary: "A small collection of difficult words."
 thumbnail: sesquip-1.jpg
+weight: 60
 ---
 
 A small collection of difficult words culled from a variety of eccentric dictionaries. Includes useful gems like _totipalmate_, meaning, web-toed.
