--- a/site/content/printing/awful-german-language.html
+++ b/site/content/printing/awful-german-language.html
@@ -3,6 +3,7 @@ author: Mark Twain
 title: The Awful German Language
 summary: An essay on the trials and trevails of learning the language.
 thumbnail: awful-1.jpg
+weight: 20
 ---
 Learning German is hard. Twain got that like no other. This essay, originally an appendix in _The Tramps Abroad_, details his trials and trevails of trying to master _deutsch_, and was a great solace to me while attempting to do the same. 
 
