--- a/site/content/printing/few-faces-emil-rudolf-weiss.html
+++ b/site/content/printing/few-faces-emil-rudolf-weiss.html
@@ -3,6 +3,7 @@ author:
 title: A Few Faces of Emil Rudolf Weiss
 summary: "A Type Specimen"
 thumbnail: few-faces-1.jpg
+weight: 50
 ---
 I published this small specimen book in two editions, German and English. Weiß designed a number of handsome typefaces that are still in use today. The Weiß Lapidar that appears on the title page below is especially handsome.
 
