--- a/site/content/printing/useful-words-grammar.html
+++ b/site/content/printing/useful-words-grammar.html
@@ -2,6 +2,7 @@
 title: "Useful Words & Grammar"
 summary: "A learner's guide to the German Language"
 thumbnail: useful-1.jpg
+weight: 10
 ---
 After filling a couple of legal pads with grammar notes, I composed and printed this compendium to tuck in my jacket pocket. It's rife with errors, but I've found it useful. 
 
