--- a/site/content/projects/a-desk.html
+++ b/site/content/projects/a-desk.html
@@ -6,9 +6,28 @@
 ---
 One week at summer's end, I decided I should have desk. No glue. No screws. One piece of 4 &times; 8&#8242; birch-veneered plywood. It's kept tense by the tight-fitting angled notches that hold the boards together--though the cables in the back don't hurt.
 
+Some crude [plans](#plans) are below.
+
 <div class="gallery">
     <img src="{{ media_url('img/scaled_desk-1.jpg')}}" />
     <img src="{{ media_url('img/scaled_desk-2.jpg')}}" />
     <img src="{{ media_url('img/scaled_desk-3.jpg')}}" />
+    <h2 id="plans">Plans</h2>
+
+This is the basic first-sketch that I followed. A lot of things changed while building the thing, so beware. Because I didn't cap the ends of the central section, it's not rigid, so I put in cable cross-stays on the back to make it stable (it's still fairly wobbly -- no fasteners!). I took out a chunk of the top part of the legs, to create the three-layered system above. 
+
+    <a href="http://www.flickr.com/photos/40358770@N00/7967635154/" title="Desk Plans by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8459/7967635154_f1a9a3a7d2_z.jpg" width="494" height="640" alt="Desk Plans"></a>
+
+    <figure>
+    <a href="http://www.flickr.com/photos/40358770@N00/7967636932/" title="Desk Plans by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8456/7967636932_39e727eb96_z.jpg" width="494" height="640" alt="Desk Plans"></a>
+<figcaption>The stains are shellac. I love that stuff.</figcaption>
+    </figure>
+
+    Here's the 4 &times; 8 birch-veneer plywood board, specc'd out to be cut. I had the guys at Home Depot do all of the big cuts -- which they did, albeit, messily. I did the rest with a cheap-o (cordless!) circular saw. 
+
+    <a href="http://www.flickr.com/photos/40358770@N00/7967639124/" title="Desk Plans by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8438/7967639124_54b84363a8_z.jpg" width="504" height="640" alt="Desk Plans"></a>
+    
+This is the tricky part, the detail of the leg-surface connection. The basic angle I calculated was 68.2&deg;, which worked out reasonable well. If it's too shallow, your legs could bow--too steep, and well, you've just made a more-or-less regular desk. Oh, and I beveled the bottom of each leg so that it stands flat--but that you'd do automatically. 
+
 </div>
 
