A variety of things. Mostly, new post on boards.

--- a/site/content/projects/ir-led-throwies.html
+++ b/site/content/projects/ir-led-throwies.html
@@ -10,7 +10,7 @@ I've always really liked the little [LED Throwies](http://www.instructables.com/
 ## Materials
 What we need: not much. Well, getting your hands on the IR receivers will be the tricky part:
 
-- CR2032 Battery [[DigiKey](http://www.digikey.com/scripts/dksearch/dksus.dll?vendor=0&keywords=751-1390-5-ND)]
+- CR2032 Battery [[DigiKey](http://www.digikey.com/product-detail/en/CR2032/P189-ND/31939)]
 
 This is just what like lives inside of millions of watches, all over this fine land. And what keeps the time in your computer accurate, and a bunch of other things. You can get them--for a small fortune--at a drugstore. Someone told me that Ikea was now selling them at close to wholesale prices.
 
