--- a/site/content/projects/ir-led-throwies.html
+++ b/site/content/projects/ir-led-throwies.html
@@ -7,6 +7,12 @@ I've been toying with with ideas for a quick, easy, scalable project for a large
 
 I've always really liked the little [LED Throwies](http://www.instructables.com/id/LED-Throwies/) from the fine people over at [Graffiti Research Lab](http://graffitiresearchlab.com/), *so* here's an updated version that allows for the little guys to be controlled by a regular old remote control. It's a little startling how simple the whole operation is.  
 
+<figure>
+    <a href="http://www.flickr.com/photos/40358770@N00/7735310028/" title="DSC_0203 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8287/7735310028_7885198dbc.jpg" width="500" height="333" alt="DSC_0203"></a>
+    <figcaption>Looking alright.</figcaption>
+</figure>
+
+
 ## Materials
 What we need: not much. Well, getting your hands on the IR receivers will be the tricky part:
 
