--- a/site/content/index.html
+++ b/site/content/index.html
@@ -1,7 +1,8 @@
 {% extends "base.j2" %}
 
 {% block splash %}
-    <h1 class="splash">Hello, I am a printer, programmer, and a student at <a href="hlt.mit.media.edu">High-Low Tech</a> at the <a href="media.mit.edu">MIT Media Lab</a>.</h1> 
+    <h1 class="splash">
+        Hello, I am a printer, programmer, and a student at <a href="hlt.mit.media.edu">High-Low Tech</a> at the <a href="media.mit.edu">MIT Media Lab</a>. Here's a bit more <a href="/about">about</a> me.</h1> 
 {% endblock %}
 
 {% block content %}
