Adding me links.

--- a/site/content/me/index.html
+++ b/site/content/me/index.html
@@ -2,10 +2,17 @@
 title: Hello
 title_ending: " | Me"
 ---
-I'm a printer, publisher, and programmer in Cambridge, Massachusetts, and a student in the [High-Low Tech](http://hlt.media.mit.edu) Research Group at the [MIT Media Lab](http://media.mit.edu). I'll be graduating in 2013. 
+I'm a printer, publisher, and programmer in Cambridge, Massachusetts, and a student in the [High-Low Tech](http://hlt.media.mit.edu) Research Group at the [MIT Media Lab](http://media.mit.edu). I work with paper and conductive inks.
 
 
-Before that, I was a computer science concentrator at Harvard, where I finished up in 2009. 
+I graduated from Harvard in 2009, where I was a computer science concentrator
 
 
-Get all the grim detail in my [resume]({{ media_url('files/resume.pdf')}}).
+You can find me on [github][0], [flickr][2], & [twitter][1].  
+
+
+Here's my [resume]({{ media_url('files/resume.pdf')}}).
+
+[0]: https://github.com/samjacoby/
+[1]: https://twitter.com/samjacoby 
+[2]: http://www.flickr.com/photos/samjacoby/ 
