--- a/site/content/projects/ir-led-throwies.html
+++ b/site/content/projects/ir-led-throwies.html
@@ -16,7 +16,7 @@ I've always really liked the little [LED Throwies](http://www.instructables.com/
 
 
 ## Materials
-What we need: not much. Well, getting your hands on the IR receivers will be the tricky part:
+What we need: not much.
 
 - CR2032 Battery [[DigiKey](http://www.digikey.com/product-detail/en/CR2032/P189-ND/31939)]
 
@@ -28,7 +28,7 @@ Pretty much anything like this will do. Available at RadioShack, Sparkfun, or wh
 
 - 38KHz Infrared Receiver [[SparkFun](https://www.sparkfun.com/products/10266)][[Digikey](http://www.digikey.com/scripts/dksearch/dksus.dll?vendor=0&keywords=751-1390-5-ND)]
 
-There are a number of these out there--the frequency, 38KHz, is an industry-standard--so anything like that should work fine. These are the same little fellows that live inside of your TV, or radio, or anything, really, that's remote-controlled. Look for one's with three-legs.  
+This is what makes the magic happen. There are a number of these out there--the frequency, 38KHz, is an industry-standard--so anything like that should work fine. This model has worked well for me and I tried a handful. These are more or less the little fellows that live inside of your TV, or radio, or anything, really, that's IR remote-controlled. Look for ones with three-legs.  
 
 - Magnet (optional)
 
