--- a/site/content/404.html
+++ b/site/content/404.html
@@ -1,1 +1,6 @@
-ERROR ERROR ERROR
+{% extends "base.j2" %}
+
+{% block splash %}
+Page not found! It's so hard to keep track of things, isn't it? 
+{% endblock %}
+
