--- a/site/content/index.html
+++ b/site/content/index.html
@@ -43,12 +43,12 @@
 
     {% if not res.meta.exclude %}
     <div class="listing">
-    {% if res.meta.thumbnail %}
-        {% set image='img/thumb_' + res.meta.thumbnail %}
-        <a href="{{ res.full_url }}"><img src="{{ media_url( image ) }}" /></a>
-    {% endif %}
     {% include "assets/render_title.j2" %}
     {% include "assets/render_summary.j2" %}
+    {% if res.meta.thumbnail %}
+        {% set image='img/thumb_narrow_' + res.meta.thumbnail %}
+        <a href="{{ res.full_url }}"><img src="{{ media_url( image ) }}" /></a>
+    {% endif %}
     </div>
     {% endif %}
 {% endfor %}
