These should already be in here. All of em

--- a/site/content/404.html
+++ b/site/content/404.html
@@ -1,6 +1,8 @@
 {% extends "base.j2" %}
 
 {% block splash %}
+    <h1 class="splash">
 Page not found! It's so hard to keep track of things, isn't it? 
+</h1>
 {% endblock %}
 
