--- a/site/content/projects/tapclip.html
+++ b/site/content/projects/tapclip.html
@@ -1,8 +1,14 @@
 ---
-title: TapClip 
+title: StoryClip 
 summary: A little capacitive-sensing board for clipping onto designs to make sweet-ass narrative interfaces and the like.  
 date: 2012-08-22 12:57:30
 exclude: True
+tags: 
+    - SenseClip
 ---
+_This is a post bringing together some ongoing research at MIT_ 
 
-<a href="http://www.flickr.com/photos/40358770@N00/7851855900/" title="TapClip v.2 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8299/7851855900_ba91a603ec.jpg" width="500" height="335" alt="TapClip v.2"></a>
+{{ macros.render_figure('
+<a href="http://www.flickr.com/photos/samjacoby/7929989432/" title="DSC_0426 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8451/7929989432_ca8d84db5b.jpg" width="500" height="333" alt="DSC_0426"></a>', "StoryClip in action. I drew this one myself, which gives it that weird mature-kid quality.')
+}}
+
