Wow, these have been wrong for 10^2 years.

--- a/site/content/index.html
+++ b/site/content/index.html
@@ -2,7 +2,7 @@
 
 {% block splash %}
     <h1 class="splash">
-        Hello, I am a printer, programmer, and a student at <a href="hlt.mit.media.edu">High-Low Tech</a> at the <a href="media.mit.edu">MIT Media Lab</a>. Here's a bit more <a href="/me/">about me</a>.</h1> 
+        Hello, I am a printer, programmer, and a student at <a href="http://hlt.mit.media.edu">High-Low Tech</a> at the <a href="http://media.mit.edu">MIT Media Lab</a>. Here's a bit more <a href="/me/">about me</a>.</h1> 
 {% endblock %}
 
 {% block content %}
