--- a/site/content/projects/tapclip.html
+++ b/site/content/projects/tapclip.html
@@ -8,5 +8,5 @@ tags:
 ---
 _This is a post bringing together some ongoing research at MIT_ 
 
-{{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/7929989432/" title="DSC_0426 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8451/7929989432_ca8d84db5b.jpg" width="500" height="333" alt="DSC_0426"></a>', "StoryClip in action. I drew this one myself, which gives it that weird mature-kid quality.")}}
+{{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/7929989432/" title="DSC_0426 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8451/7929989432_ca8d84db5b.jpg" width="500" height="333" alt="DSC_0426"></a>', "StoryClip in action. I drew this one myself, which gives it that weird grown-up-kid quality.")}}
 
