--- a/site/content/projects/ir-led-throwies.html
+++ b/site/content/projects/ir-led-throwies.html
@@ -9,18 +9,14 @@ I've been toying with with ideas for a quick, easy, scalable project for a large
 
 I've always really liked the little [LED Throwies](http://www.instructables.com/id/LED-Throwies/) from the fine people over at [Graffiti Research Lab](http://graffitiresearchlab.com/), *so* here's an updated version that allows for the little guys to be controlled by a regular old remote control. It's a little startling how simple the whole operation is.  
 
-<figure>
-    <a href="http://www.flickr.com/photos/40358770@N00/7735310028/" title="DSC_0203 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8287/7735310028_7885198dbc.jpg" width="500" height="333" alt="DSC_0203"></a>
-    <figcaption>Looking alright.</figcaption>
-</figure>
+{{ macros.render_figure('<a href="http://www.flickr.com/photos/40358770@N00/7735310028/" title="DSC_0203 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8287/7735310028_7885198dbc.jpg" width="500" height="333" alt="DSC_0203"></a>', "Looking alright.") }}
 
-
-## Materials
-What we need: not much.
+## Materia
+What we need: not much. If you're interested, I drew up a [PDF hand-out]({{ media_url('files/ir_throwie.pdf') }}) that details some of this. 
 
 - CR2032 Battery [[DigiKey](http://www.digikey.com/product-detail/en/CR2032/P189-ND/31939)]
 
-This is just what like lives inside of millions of watches, all over this fine land. And what keeps the time in your computer accurate, and a bunch of other things. You can get them--for a small fortune--at a drugstore. Someone told me that Ikea was now selling them at close to wholesale prices.
+This is what lives inside of millions of watches, all over this fine land. And what keeps the time in your computer accurate, and a bunch of other things. You can get them--for a small fortune--at a drugstore. Someone told me that Ikea was now selling them at close to wholesale prices.
 
 - A Regular LED. [[SparkFun](https://www.sparkfun.com/products/533)][[DigiKey](http://www.digikey.com/product-detail/en/C503B-BCS-CV0Z0461/C503B-BCS-CV0Z0461-ND/1922944)]
 
@@ -83,6 +79,7 @@ Once you feel good about the operation, wrap it all up in tape -- and you're rea
 
 It's like a TV. A one-pixel TV.
 <a href="http://www.flickr.com/photos/40358770@N00/7784247614/" title="IMG_1262 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8283/7784247614_41aa4e6f8c.jpg" width="500" height="380" alt="IMG_1262"></a>
+
 
 
 
