--- a/site/content/index.html
+++ b/site/content/index.html
@@ -38,6 +38,10 @@ description: Hello, I'm a printer, programmer and student at the MIT Media Lab. 
         <div class="listing">
             {% include "assets/render_title.j2" %}
             {% include "assets/render_summary.j2" %}
+            {% if res.meta.thumbnail %}
+                {% set image='img/thumb_narrow_' + res.meta.thumbnail %}
+                <a href="{{ res.full_url }}"><img src="{{ media_url( image ) }}" /></a>
+            {% endif %}
         </div>
     {% endif %}
 {%- endfor %}
