--- a/site/content/projects/ir-led-throwies.html
+++ b/site/content/projects/ir-led-throwies.html
@@ -11,7 +11,7 @@ I've always really liked the little [LED Throwies](http://www.instructables.com/
 
 {{ macros.render_figure('<a href="http://www.flickr.com/photos/40358770@N00/7735310028/" title="DSC_0203 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8287/7735310028_7885198dbc.jpg" width="500" height="333" alt="DSC_0203"></a>', "Looking alright.") }}
 
-## Materia
+## Material
 What we need: not much. If you're interested, I drew up a [PDF hand-out]({{ media_url('files/ir_throwie.pdf') }}) that details some of this. 
 
 - CR2032 Battery [[DigiKey](http://www.digikey.com/product-detail/en/CR2032/P189-ND/31939)]
