Among other things.

--- a/site/content/index.html
+++ b/site/content/index.html
@@ -29,7 +29,7 @@ description: Hello, I'm a printer, programmer and student at the MIT Media Lab. 
 {%- endfor %}
 </section>
 
-<section class="wrapper">
+<section class="wrapper projects">
 {% for res in site.content.walk_resources_grouped_by_projects() -%}
     {% if loop.first %}
     <nav><h2><a href="/projects/">PROJECTS</a></h2></nav> 
