--- a/site/content/index.html
+++ b/site/content/index.html
@@ -19,6 +19,7 @@ description: Hello, I'm a printer, programmer and student at the MIT Media Lab. 
     {% if not res.meta.exclude %}
     <div class="listing">
             {% include "assets/render_title.j2" %}
+        <p class="small date">{{ res.meta.date | date_format("%b %d, %Y") }}</p> 
             {% include "assets/render_summary.j2" %}
     {% if res.meta.thumbnail %}
         {% set image='img/thumb_narrow_' + res.meta.thumbnail %}
