Keeping track of the generalities of the mentals.

--- a/site/content/projects/tapclip.html
+++ b/site/content/projects/tapclip.html
@@ -1,12 +1,14 @@
 ---
-title: StoryClip 
+title: TapClip 
 summary: A little capacitive-sensing board for clipping onto designs to make sweet-ass narrative interfaces and the like.  
 date: 2012-08-22 12:57:30
 exclude: True
 tags: 
     - SenseClip
 ---
-_This is a post bringing together some ongoing research at MIT_ 
+_This is a project bringing together some of my ongoing research at MIT_ 
 
-{{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/7929989432/" title="DSC_0426 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8451/7929989432_54a77a2a56.jpg" width="500" height="333" alt="DSC_0426"></a>', "StoryClip in action. I drew this one myself, which gives it that weird grown-up-kid quality.")}}
+TapClip is a pretty generic name, so I've called it _StoryClip_, as well. Essentially, it's a specialized capactive sensor board that I'm using as a test-bed for exploring ad-hoc user-interfaces. I've been playing with a handful of applications. 
+
+{{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/7929989432/" title="DSC_0426 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8451/7929989432_54a77a2a56.jpg" width="500" height="333" alt="DSC_0426"></a>', "The clip in action. I drew this one myself, which gives it that weird grown-up-kid quality.")}}
 
