--- a/site/content/projects/tapclip.html
+++ b/site/content/projects/tapclip.html
@@ -1,6 +1,6 @@
 ---
 title: TapClip 
-summary: A little capacitive-sensing board for clipping onto conductive materials to make interfaces and the like. 
+summary: A capacitive-sensing board for creating ad-hoc computer interfaces from conductive inks.  
 date: 2012-08-22 12:57:30
 tags: 
     - SenseClip
@@ -11,3 +11,5 @@ _This is a project that brings together a broad set of my research at MIT_
 TapClip is a specialized capactive sensor board that I'm using as a test-bed for exploring ad-hoc user-interface design, and more broadly, self-made technologies. 
 
 {{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/7929989432/" title="DSC_0426 by s_jacoby, on Flickr"><img src="http://farm9.staticflickr.com/8451/7929989432_54a77a2a56.jpg" width="500" height="333" alt="DSC_0426"></a>', "The clip in action. I drew this one myself, which gives it that weird grown-up-kid quality.")}}
+
+I've documented some of my process in a variety of briefer posts. Take a look.  
