--- a/site/content/printing/reading-group-forty-seven.html
+++ b/site/content/printing/reading-group-forty-seven.html
@@ -1,7 +1,7 @@
 ---
 author: Paul Celan
 title: A Reading for Group 47
-summary: A short collection of Celan's poetry in German & English. 
+summary: A short collection of Paul Celan's poetry in German & English. 
 thumbnail: celan-3.jpg
 weight: 90
 ---
