Various tweaks and achievements.

--- a/site/content/404.html
+++ b/site/content/404.html
@@ -1,8 +1,8 @@
-{% extends "base.j2" %}
+{% extends "post.j2" %}
 
 {% block splash %}
     <h1 class="splash">
-Page not found! It's so hard to keep track of things, isn't it? 
+Page not found! I just keep on losing track of things... 
 </h1>
 {% endblock %}
 
