Making this have menu.

--- a/site/content/404.html
+++ b/site/content/404.html
@@ -1,8 +1,6 @@
-{% extends "post.j2" %}
+{% extends "blank.j2" %}
 
-{% block splash %}
-    <h1 class="splash">
-Page not found! I just keep on losing track of things... 
-</h1>
+{% block post %}
+#Page not found! I just keep on losing track of things... 
 {% endblock %}
 
