--- a/site/content/projects/monotype-app.html
+++ b/site/content/projects/monotype-app.html
@@ -4,7 +4,7 @@ summary: How well do you know your classic humanist typefaces?
 date: 2010-10-09 14:20:34
 thumbnail: monotype-composite-1.jpg
 ---
-{{ macros.render_figure("<img src='/media/img/monotype-composite-1.jpg'></img>" , "Garamond, Joanna, & Centaur.") }}
+{{ macros.render_figure("<img src='/media/img/monotype-composite-1.jpg'/>" , "Garamond, Joanna, & Centaur.") }}
 
 {% mark excerpt %}
 In the fine printing community, there is a slight kerfuffle around the aesthetic difference between type designed for letterpress printing and type designed for digital or offset printing. With the rise of photopolymer printing, many designers are using digital-native typefaces to print on film, which inevitably results in bulky, inelegant letterforms, as a digital type design doesn't account for the cross-sectional distribution of ink-on-paper.
